metadata/force-app/main/default/objects/Test_Object__c/fields/Test_Account_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Account_Lookup_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Account Lookup Field</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Name</field>
            <operation>contains</operation>
            <value>Test</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Objects</relationshipLabel>
    <relationshipName>Test_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>