metadata/force-app/main/default/objects/Test_Object__c/fields/Test_Picklist_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Picklist_Field__c</fullName>
    <description>aefgsd desc</description>
    <label>Test Picklist Field 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>