metadata/force-app/main/default/objects/Test_Object__c/fields/Test_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Text_Field__c</fullName>
    <label>Test Text Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>