metadata/force-app/main/default/objects/Test_Object__c/validationRules/test_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>test_validation_rule</fullName>
    <active>true</active>
    <description>desc</description>
    <errorConditionFormula>5 &gt; 3 &amp;&amp; 0 == 0</errorConditionFormula>
    <errorMessage>adfadsfgdg</errorMessage>
</ValidationRule>